# shadylib

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml  main.workflow
.github/workflows/: build.yml
src/shadylib/: __init__.py  correction.py  effective.py  math_utils.py  models.py
tests/: conftest.py  test_effective.py  test_math_utils.py  test_models.py  test_shadylib.py
